# chile-capital-natural

./: .gitignore  pyproject.toml  requirements.txt  run.py
analysis/: export_panel.py  pobreza_capital_natural.py
dashboard/: app.py
data/: panel_comunal_chile.xlsx
data/processed/: comunas_chile.geojson
db/: schema.py
etl/: config.py  download.py  pipeline.py  transform.py  transform_aire.py  transform_casen.py  transform_deforestation.py  transform_incendios.py  transform_water_risk.py
