[project]
name = "chile-capital-natural"
version = "0.1.0"
description = "Pipeline de datos ambientales de Chile — Capital Natural"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.1.0",
    "pandas>=2.2.0",
    "geopandas>=1.0.0",
    "streamlit>=1.40.0",
    "plotly>=5.24.0",
    "httpx>=0.27.0",
    "openpyxl>=3.1.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "pyarrow>=17.0.0",
    "shapely>=2.0.0",
    "fiona>=1.10.0",
    "netcdf4>=1.7.4",
    "rasterstats>=0.20.0",
    "boto3>=1.42.90",
]

[tool.uv]
dev-dependencies = [
    "jupyterlab>=4.0.0",
    "ipykernel>=6.29.0",
    "matplotlib>=3.8.0",
]

[project.scripts]
chile-env = "run:app"
